--- a/Modules/Classification/CLUtilities/CMakeLists.txt
+++ b/Modules/Classification/CLUtilities/CMakeLists.txt
@@ -1,6 +1,8 @@
 MITK_CREATE_MODULE(
   DEPENDS MitkCore MitkCLCore
-  PACKAGE_DEPENDS PUBLIC Eigen
+  PACKAGE_DEPENDS 
+    PUBLIC Eigen
+    PUBLIC  ITK|ITKImageLabel+ITKConnectedComponents+ITKImageCompare+ITKMathematicalMorphology+ITKBinaryMathematicalMorphology
   WARNINGS_AS_ERRORS
 )
 
