--- a/Modules/DiffusionImaging/FiberTracking/CMakeLists.txt
+++ b/Modules/DiffusionImaging/FiberTracking/CMakeLists.txt
@@ -8,7 +8,10 @@ mitk_check_module_dependencies(
 
 if(NOT _missing_deps)
 
-  set(lut_url http://mitk.org/download/data/FibertrackingLUT.tar.gz)
+  if(NOT MITK_LUT_DOWNLOAD_PREFIX_URL)
+    set(MITK_LUT_DOWNLOAD_PREFIX_URL http://mitk.org/download/data)
+  endif()
+  set(lut_url ${MITK_LUT_DOWNLOAD_PREFIX_URL}/FibertrackingLUT.tar.gz)
   set(lut_tarball ${CMAKE_CURRENT_BINARY_DIR}/FibertrackingLUT.tar.gz)
   message("Downloading FiberTracking LUT ${lut_url}...")
   file(DOWNLOAD ${lut_url} ${lut_tarball}
